# tree-sitter-mira

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  panic_example.mr  pnpm-lock.yaml  pyproject.toml  setup.py  start.mr  std.mr  test.mr  tree-sitter.json
bindings/c/: tree-sitter-mira.pc.in
bindings/c/tree_sitter/: tree-sitter-mira.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mira/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMiraTests/: TreeSitterMiraTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
