[package]
name = "tree-sitter-mira"
description = "The Treesitter parser for the Mira programming language"
version = "0.1.0"
authors = ["FishingHacks"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mira"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/fishinghacks/tree-sitter-mira.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
